@startuml

title __IMPL's Class Diagram__\n

  package  {
    package hska.iwi.eShopMaster.model.businessLogic.manager {
      package hska.iwi.eShopMaster.model.businessLogic.manager.impl {
        class CategoryManagerImpl {
            + CategoryManagerImpl()
            + getCategories()
            + getCategory()
            + getCategoryByName()
            + addCategory()
            + delCategory()
            + delCategoryById()
        }
      }
    }
  }
  

  package  {
    package hska.iwi.eShopMaster.model.businessLogic.manager {
      package hska.iwi.eShopMaster.model.businessLogic.manager.impl {
        class ProductManagerImpl {
            + ProductManagerImpl()
            + getProducts()
            + getProductsForSearchValues()
            + getProductById()
            + getProductByName()
            + addProduct()
            + deleteProductById()
            + deleteProductsByCategoryId()
        }
      }
    }
  }
  

  package  {
    package hska.iwi.eShopMaster.model.businessLogic.manager {
      package hska.iwi.eShopMaster.model.businessLogic.manager.impl {
        class UserManagerImpl {
            + UserManagerImpl()
            + registerUser()
            + getUserByUsername()
            + deleteUserById()
            + getRoleByLevel()
            + doesUserAlreadyExist()
            + validate()
        }
      }
    }
  }
  

  CategoryManagerImpl -up-|> CategoryManager
  CategoryManagerImpl o-- CategoryDAO : helper
  ProductManagerImpl -up-|> ProductManager
  ProductManagerImpl o-- ProductDAO : helper
  UserManagerImpl -up-|> UserManager
  UserManagerImpl o-- UserDAO : helper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
